# dispatch

./: .gitignore  dispatch.db  map.txt  pyproject.toml
app/: exceptions.py  main.py
app/database/: base.py  connection.py
app/models/: discharged_patient.py  doctor.py  idle_queue.py  patient.py
app/routes/: doctor_routes.py  patient_routes.py
app/schemas/: discharged_patient_schema.py  doctor_schema.py  idle_queue.py  patient_schema.py
app/services/: allocation_service.py  assessment_service.py  discharge_service.py  intake_service.py  triage_service.py
