[project]
name = "dispatch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.3",
    "litecli>=1.17.1",
    "matplotlib>=3.10.9",
    "pydantic>=2.13.4",
    "sqlalchemy>=2.0.50",
    "uvicorn>=0.48.0",
]
